# rust-protobuf-json

./: Cargo.toml  gentestproto.sh
src/: lib.rs
src/tests/: mod.rs  test_proto.proto  test_proto.rs
