[package]
authors = ["Matt Jones <jonesmr@gmail.com>, Drazen Urch <github@drazenur.ch>"]
description = "Library for serializing Google protobuf objects as JSON using Rust."
repository = "https://github.com/mrjones/rust-protobuf-json"
license = "MIT"
name = "protobuf-json"
version = "0.3.0"

[dependencies]
protobuf = "^1.4"
serde_json = "^1.0"
